changes max of stack